fix:overflow-x

--- a/assets/css/account/dashboard_chart.css
+++ b/assets/css/account/dashboard_chart.css
@@ -1,6 +1,6 @@
 .section3 {
     grid-area: section3;
-    width: 93%;
+    width: 90%;
     display: grid;
     grid-template-areas:
         'group2 group1'
@@ -114,7 +114,7 @@
     grid-template-areas:
         'group1 group2'
     ;
-    width: 96%;
+    width: 90%;
     gap: 1rem;
     margin: auto;
     max-height: 34rem;
