--- a/assets/css/account/dashboard_header.css
+++ b/assets/css/account/dashboard_header.css
@@ -55,3 +55,7 @@
     border-radius: 50%;
     box-shadow: 0.1rem 0.1rem 1rem 0rem var(--primary-color);
 }
+.contentContainer{
+    height: 88vh;
+    overflow-y: scroll;
+}
